Fix button overflow on confirmation modal for mobile (#4465)

--- a/app/javascript/styles/components.scss
+++ b/app/javascript/styles/components.scss
@@ -3499,7 +3499,7 @@ button.icon-button.active i.fa-retweet {
 }
 
 .confirmation-modal {
-  max-width: 280px;
+  max-width: 85vw;
 
   @media screen and (min-width: 480px) {
     max-width: 380px;
